welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: value nbPas
nbPas=0
^Variables:3: error: value ! is not a member of Boolean
while (!estSurBiscuit!){
                     ^Variables:4: error: not found: value nbPas
      nbPas= nbPas+1
      ^Variables:8: error: not found: value dejafait
dejafait=0     	
^Variables:9: error: not found: value dejafait
while (dejafait != nbPas){
       ^