welcome.lessons.welcome.variables.Variables.scala.code
nbPas=0
while (!estSurBiscuit!){
      nbPas= nbPas+1
      avance();
      }
porteBiscuit(); 
dejafait=0     	
while (dejafait != nbPas){
	  recule    
}
poseBiscuit();